# InDevContainer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: release-please.yml
project/plans/2026-05-27-dcode-shell-host-bridges/: research-findings.md
project/plans/2026-06-30-browser-passthrough/: plan.md  research-findings.md
src/indevcontainer/: __init__.py  __main__.py  _progress.py  cli.py  copilot.py  core.py  devcontainer_cli.py  doctor.py  shell.py  update.py  version_check.py  wsl.py
tests/: test_cli.py  test_copilot.py  test_core.py  test_devcontainer_cli.py  test_doctor.py  test_progress.py  test_shell.py  test_update.py  test_version_check.py  test_wsl.py
