[project]
name = "indevcontainer"
description = "Run code, shells, and the Copilot CLI in VS Code devcontainers from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["json5", "rich>=13.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rosstaco/InDevContainer"
Issues = "https://github.com/rosstaco/InDevContainer/issues"
Source = "https://github.com/rosstaco/InDevContainer"

[project.scripts]
idc = "indevcontainer.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/indevcontainer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/indevcontainer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "ruff"]
